<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/container"
        android:layout_width="@dimen/common_spacing_0dp"
        android:layout_height="@dimen/common_spacing_0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/edit_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottom_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing_large"
        android:orientation="horizontal"
        app:barrierDirection="top"
        app:constraint_referenced_ids="content, save" />

    <EditText
        android:id="@+id/content"
        android:layout_width="@dimen/common_spacing_0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/post_input_text_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/common_spacing_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_save"
        android:padding="@dimen/common_spacing_medium"
        android:src="@drawable/ic_baseline_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/edit_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing_large"
        android:orientation="horizontal"
        app:barrierDirection="top"
        app:constraint_referenced_ids="edit_message, cancel" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="edit_message, bottom_line_edit,content_check,cancel"
        app:layout_constraintBottom_toTopOf="@id/bottom_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_barrier" />

    <TextView
        android:id="@+id/edit_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/common_spacing_medium"
        android:paddingTop="@dimen/common_spacing_medium"
        android:text="@string/edit_message"
        android:textColor="@color/blue"
        android:textSize="@dimen/edit_text_size"
        app:layout_constraintBottom_toTopOf="@id/content_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_cancel"
        android:padding="@dimen/common_spacing_medium"
        android:src="@drawable/ic_baseline_cancel"
        app:layout_constraintBottom_toTopOf="@id/bottom_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />

    <TextView
        android:id="@+id/content_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:paddingStart="@dimen/common_spacing_medium"
        android:paddingBottom="@dimen/common_spacing_medium"
        android:singleLine="true"
        android:textSize="@dimen/edit_text_size"
        app:layout_constraintBottom_toTopOf="@+id/bottom_line_edit"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_message"
        tools:text="message"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/bottom_line_edit"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/silver"
        android:contentDescription="@string/description_bottom_line_edit"
        app:layout_constraintBottom_toTopOf="@id/bottom_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <ImageView-->
    <!--        android:id="@+id/check"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:contentDescription="@string/description_edit"-->
    <!--        android:padding="@dimen/common_spacing_medium"-->
    <!--        android:src="@drawable/ic_baseline_check"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/bottom_barrier"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/bottom_line_edit" />-->

</androidx.constraintlayout.widget.ConstraintLayout>