<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing_large"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/common_spacing_medium"
        android:layout_marginEnd="@dimen/common_spacing_medium"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing_medium"
        android:layout_marginEnd="@dimen/common_spacing_medium"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_centerInParent="true"
        android:contentDescription="@string/description_post_author_avatar"
        android:src="@drawable/netology"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/description_more_vert"
        app:icon="@drawable/ic_menu_selector"

        app:iconTint="@color/menu_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />
    <!-- tools:ignore Small size & Speakable Button (при ненадобности удалить) -->

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/upper_menu_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/common_spacing_large"
        app:constraint_referenced_ids="avatar, published" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autoLink="web"
        app:constraint_referenced_ids="background_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/published"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/play_video_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="background_video, play" />

    <ImageButton
        android:id="@+id/background_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description_background_video"
        android:src="@drawable/background_video"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_play"
        android:src="@drawable/ic_baseline_play_circle_outline"
        app:layout_constraintBottom_toBottomOf="@id/background_video"
        app:layout_constraintEnd_toEndOf="@id/background_video"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@id/background_video"
        app:layout_constraintTop_toTopOf="@id/background_video"
        app:layout_constraintVertical_bias="0.535"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/downer_menu_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/common_spacing_large"
        app:constraint_referenced_ids="content,background_video" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing_large"
        android:checkable="true"
        android:contentDescription="@string/description_like"
        android:minWidth="48dp"

        app:icon="@drawable/ic_like_selector"
        app:iconTint="@color/like_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/downer_menu_barrier" />
    <!--Закоментил
    <TextView
        android:id="@+id/like_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing_medium"
        android:text="0"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/like"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toTopOf="@+id/like" />
-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.AppTheme.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing_large"
        android:layout_marginTop="@dimen/common_spacing_large"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/description_share"
        android:minWidth="48dp"
        app:icon="@drawable/ic_share_selector"
        app:iconTint="@color/share_selector"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toTopOf="@+id/downer_menu_barrier" />

    <!-- Выше изменил на like,было  app:layout_constraintStart_toEndOf="@+id/like_num -->
    <!--Закоментил
    <TextView
        android:id="@+id/share_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing_medium"
        android:text="0"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/share"
        app:layout_constraintStart_toEndOf="@+id/share"
        app:layout_constraintTop_toTopOf="@+id/share" />
-->
    <ImageButton
        android:id="@+id/view"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginTop="@dimen/common_spacing_large"
        android:layout_marginEnd="@dimen/common_spacing_medium"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_view"
        app:layout_constraintEnd_toStartOf="@+id/view_num"
        app:layout_constraintTop_toTopOf="@id/downer_menu_barrier"
        app:srcCompat="@drawable/ic_baseline_remove_red_eye"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/view_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="999,9M"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>